--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "debug": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": "npx nodemon index.js",
+    "debug": "npx nodemon index.js",
+    "dev": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
