--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
     "nodemon": "^2.0.15"
