1. Category CRUD added 2. DownloadTasks - All tasks can be downloaded in an Excel sheet via 'ExcelJs' node package. 3. Saving of Task details updated. 4. Querying of task & category updated. 5. Image added for each task. That image is saved in 'public/images' path. 6. Added node packages of "exceljs","helmet","jspdf","multer","nodemailer","uuid","xlsx".

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # PORT="3000"
 PORT="3000"
 API_SECRET="saapsaap"
+JWTEXP="360000022222"
+JWTREFRESHEXP="86400000"
+# JWTEXP="30"
+# JWTREFRESHEXP="100"
