--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.6",
+    "exceljs": "^4.4.0",
     "express": "^4.17.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
+    "nodemon": "^2.0.15",
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
