--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.1.8",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "nodemailer-express-handlebars": "^6.1.2",
     "nodemon": "^2.0.15",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
